Добавил подсчет зарплаты, платные работы, действия, их добавление удаление. Оповещения в ТГ о подключенном оборудовании к нашим железкам